shop-comms/infra/k8s/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: shop.dev
      http:
        paths:
          # - path: /api/payments/?(.*)
          #   backend:
          #     serviceName: payments-srv
          #     servicePort: 3000
          - path: /api/auth/?(.*)
            backend:
              serviceName: auth-srv
              servicePort: 3000
          - path: /api/inventory/?(.*)
            backend:
              serviceName: inventory-srv
              servicePort: 3000
          # - path: /api/orders/?(.*)
          #   backend:
          #     serviceName: orders-srv
          #     servicePort: 3000
          - path: /?(.*)
            backend:
              serviceName: client-srv
              servicePort: 3000
